stitch by number

--- a/index.html
+++ b/index.html
@@ -147,10 +147,13 @@
                     <div class="project-name">Connections</div>
                     <div class="project-description">A simple game I made to play at my wedding.</div>
                 </a>
+                <a href="/stitch_by_number/" class="project">
+                    <div class="project-name">Stitch by Number</div>
+                    <div class="project-description">A tool that converts images into needlepoint stitch-ready designs
+                        with thread color mapping and PDF export.</div>
+                </a>
             </div>
         </section>
-
-
     </div>
 </body>
 
