--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ryan Drapeau</title>
+    <link rel="icon" type="image/jpeg" href="/drapeau.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
@@ -33,10 +34,23 @@
             margin-bottom: 3rem;
         }
 
+        .header-content {
+            display: flex;
+            align-items: center;
+            gap: 1.5rem;
+            margin-bottom: 1rem;
+        }
+
+        .headshot {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+
         h1 {
             font-size: 1.75rem;
             font-weight: 600;
-            margin-bottom: 1rem;
             color: #111;
         }
 
@@ -122,7 +136,10 @@
 <body>
     <div class="container">
         <header>
-            <h1>Ryan Drapeau</h1>
+            <div class="header-content">
+                <img src="/drapeau.jpg" alt="Ryan Drapeau" class="headshot">
+                <h1>Ryan Drapeau</h1>
+            </div>
             <p class="bio">I am currently a Principal ML Engineer at Stripe.</p>
             <a href="https://www.linkedin.com/in/rdrapeau/" class="linkedin-link" target="_blank"
                 rel="noopener noreferrer">
