Add last updated dates to project cards

--- a/index.html
+++ b/index.html
@@ -122,6 +122,12 @@
             color: #666;
         }
 
+        .project-date {
+            font-size: 0.8rem;
+            color: #999;
+            margin-top: 0.5rem;
+        }
+
         footer {
             margin-top: 4rem;
             padding-top: 2rem;
@@ -159,15 +165,18 @@
                     <div class="project-name">Org Planning Tool</div>
                     <div class="project-description">A Monte Carlo simulation tool for engineering leaders to model
                         organizational growth, promotions, and budget planning across performance cycles.</div>
+                    <div class="project-date">Last updated: Jan 26, 2026</div>
                 </a>
                 <a href="/connections/" class="project">
                     <div class="project-name">Connections</div>
                     <div class="project-description">A simple game I made to play at my wedding.</div>
+                    <div class="project-date">Last updated: Jan 26, 2026</div>
                 </a>
                 <a href="/stitch_by_number/" class="project">
                     <div class="project-name">Stitch by Number</div>
                     <div class="project-description">A tool that converts images into needlepoint stitch-ready designs
                         with thread color mapping and PDF export.</div>
+                    <div class="project-date">Last updated: Jan 26, 2026</div>
                 </a>
             </div>
         </section>
