--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 </a>
                 <a href="/connections/" class="project">
                     <div class="project-name">
-                        <img src="/connections/favicon.svg" alt="" class="project-favicon">
+                        <img src="/connections/favicon.png" alt="" class="project-favicon">
                         Connections
                     </div>
                     <div class="project-description">A simple game I made to play at my wedding.</div>
