--- a/photo_stacker/index.html
+++ b/photo_stacker/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/photo_stacker/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/photo_stacker/favicon-32.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/photo_stacker/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
         content="HDR photo stacking and merging - Lightroom-quality exposure fusion in your browser" />
