Add Photo Stacker to home page

--- a/index.html
+++ b/index.html
@@ -196,12 +196,21 @@
                         with thread color mapping and PDF export.</div>
                     <div class="project-date" data-project="stitch_by_number">Last updated: --</div>
                 </a>
+                <a href="/photo_stacker/" class="project">
+                    <div class="project-name">
+                        <img src="/photo_stacker/favicon-32.png" alt="" class="project-favicon">
+                        Photo Stacker
+                    </div>
+                    <div class="project-description">HDR exposure fusion in your browser - merge multiple exposures into
+                        a single well-balanced photo, Lightroom-quality results.</div>
+                    <div class="project-date" data-project="photo_stacker">Last updated: --</div>
+                </a>
             </div>
         </section>
     </div>
     <script>
         // Fetch build dates from each project's build-info.json
-        const projects = ['org_planning', 'connections', 'stitch_by_number'];
+        const projects = ['org_planning', 'connections', 'stitch_by_number', 'photo_stacker'];
 
         projects.forEach(async (project) => {
             try {
